# kirjoitusvirheidenkorjaaja

./: .coverage  .gitignore  .pylintrc  README.md  määrittelydokumentti.md  pyproject.toml  test_sanalista.txt
.hypothesis/constants/: 579ee90c4c2287e3  5e51a0397e14a1b4  d56f75cf7e93c3a7
.hypothesis/tmp/: tmp4g_nx_r3  tmp4sx_tshg  tmp7ry4datb  tmpj9p1a4_b  tmptb2zq9x6  tmptuk4hu6f
Viikkoraportit/: Viikkoraportti 1  Viikkoraportti 2  Viikkoraportti 3  Viikkoraportti 4  Viikkoraportti 6
dokumentaatio/: testausdokumentti.md  toteutusdokumentti.md
src/: app.py  distance.py  index.py  spellcheck.py  trie.py
src/sanakirja/: sanakirja_adjektiivit.txt  sanakirja_etunimi.txt  sanakirja_lukusana.txt  sanakirja_pronominit.txt  sanakirja_substantiivit.txt  sanakirja_sukunimi.txt  sanakirja_verbit.txt
src/static/: main.css
src/templates/: index.html
src/tests/: distance_test.py  performance_test.py  spellcheck_test.py  trie_test.py
